--- a/pathfinder/pom.xml
+++ b/pathfinder/pom.xml
@@ -41,7 +41,10 @@
             <artifactId>spring-boot-devtools</artifactId>
             <version>2.7.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
