--- a/pathfinder/src/main/resources/application.yml
+++ b/pathfinder/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: "jdbc:mysql://localhost:3306/pathfinder_db?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
+    url: "jdbc:mysql://localhost:3306/pathfinder?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
     username: root
-    password: "@Root123"
+    password: 12345
   servlet:
     multipart:
       max-file-size: 1MB
@@ -12,9 +12,9 @@ spring:
     hiddenmethod:
       filter:
         enabled: true
-#  sql:
-#    init:
-#      mode: always
+  #sql:
+    #init:
+      #mode: always
   jpa:
     # Choose either MySQL 8 or MySQL 5 below
     # For MySQL 8
@@ -26,7 +26,7 @@ spring:
     open-in-view: false
     properties:
       hibernate:
-        format_sql: false
+        format_sql: true
     defer-datasource-initialization: true
 #Cloudinary Properties
 #cloudinary:
