--- a/pathfinder/src/main/resources/application.yml
+++ b/pathfinder/src/main/resources/application.yml
@@ -1,9 +1,9 @@
 spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
-    url: "jdbc:mysql://localhost:3306/pathfinder?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
+    url: "jdbc:mysql://localhost:3306/pathfinder_workshop?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
     username: root
-    password: 12345
+    password: "@Root123"
   servlet:
     multipart:
       max-file-size: 1MB
