Updated route classes and added category classes

--- a/pathfinder/src/main/resources/application.yml
+++ b/pathfinder/src/main/resources/application.yml
@@ -2,8 +2,8 @@ spring:
   datasource:
     driverClassName: com.mysql.cj.jdbc.Driver
     url: "jdbc:mysql://localhost:3306/pathfinder_workshop?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
-    username: root
-    password: "@Root123"
+    username: ${MySQL_USERNAME}
+    password: ${MySQL_PASSWORD}
   servlet:
     multipart:
       max-file-size: 1MB
