--- a/pathfinder/pom.xml
+++ b/pathfinder/pom.xml
@@ -77,6 +77,14 @@
             <version>3.1.0</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-web</artifactId>
+            <version>5.7.5</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
