--- a/pathfinder/pom.xml
+++ b/pathfinder/pom.xml
@@ -37,11 +37,24 @@
             <scope>test</scope>
         </dependency>
 
+
+<!--        -->
+<!--        USE POSTGRESQL (MVNREPOSITORY) INSTEAD OF MYSQL, BECAUSE HEROKU WORKS WITH POSTGRESQL-->
+<!--        &lt;!&ndash; https://mvnrepository.com/artifact/org.postgresql/postgresql &ndash;&gt;-->
+<!--        <dependency>-->
+<!--            <groupId>org.postgresql</groupId>-->
+<!--            <artifactId>postgresql</artifactId>-->
+<!--            <version>42.5.0</version>-->
+<!--        </dependency>-->
+
+
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <scope>runtime</scope>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
