--- a/pathfinder/src/main/resources/application.yml
+++ b/pathfinder/src/main/resources/application.yml
@@ -1,6 +1,17 @@
 spring:
   datasource:
+
+    #HEROKU DRIVER NAME:
+    #driverClassName: org.postgresql.Driver
+
     driverClassName: com.mysql.cj.jdbc.Driver
+
+    #HEROKU PROPERTIES :   ->    coming from heroku
+    # url: ${JDBC_DATABASE_URL:}
+    # username: ${JDBC_DATABASE_USERNAME:}
+    # password: ${JDBC_DATABASE_PASSWORD:}
+
+
     url: "jdbc:mysql://${MYSQL_HOST:localhost}:3306/pathfinder_workshop_security?allowPublicKeyRetrieval=true&useSSL=false&createDatabaseIfNotExist=true&serverTimezone=UTC"
     username: ${MySQL_USERNAME}
     password: ${MySQL_PASSWORD}
@@ -16,6 +27,11 @@ spring:
 #    init:
 #      mode: always
   jpa:
+
+    #PostgreSQL DIALECT FOR HEROKU
+    #database-platform: org.hibernate.dialect.PostgreSQLDialect
+
+
     # Choose either MySQL 8 or MySQL 5 below
     # For MySQL 8
     database-platform: org.hibernate.dialect.MySQL8Dialect
@@ -33,3 +49,8 @@ spring:
   #api-key: 
   #api-secret: 
   #cloud-name: 
+
+
+
+#HEROKU PORT:    ->    coming from heroku
+#server.port: ${PORT:8080}:
